--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "scripts": {
     "beautify": "js-beautify --type html --indent-size 2 --inline i,b,strong,span html/**/*.html",
-    "browser-sync": "browser-sync start --server --startPath \"html/page/auth.html\" --files \"**/*\" --directory --no-notify --no-open",
-    "delete-dev-folder": "del-cli --force assets/css",
+    "browser-sync": "browser-sync start --server --startPath \"html/auth.html\" --files \"**/*\" --directory --no-notify --no-open",
+    "delete-dev-folder": "del-cli --force assets/css html",
     "prod": "npm-run-all delete-dev-folder pug-prod sass-compile-prod beautify",
-    "pug-dev": "pug --obj pug/assets/data.json --watch pug/templates --out html/ --pretty",
-    "pug-prod": "pug --obj pug/assets/data.json pug/templates --out html/ --pretty",
+    "pug-dev": "pug --obj pug/assets/data.json --watch pug/templates/page --out html/ --pretty",
+    "pug-prod": "pug --obj pug/assets/data.json pug/templates/page --out html/ --pretty",
     "sass-compile-dev": "sass --load-path=node_modules --watch --no-source-map --update --style=expanded assets/scss:assets/css",
     "dev": "npm-run-all --parallel pug-dev sass-compile-dev browser-sync",
     "sass-compile-prod": "sass --load-path=node_modules --load-path=scss --no-source-map --style=compressed assets/scss:assets/css",
